<?xml version="1.0"?>
<package format="2">
  <name>t265_utils</name>
  <version>0.0.1</version>
  <description> t265 utils </description>
  <maintainer email="pol@pol.com">pol</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
  <export>

  </export>
</package>
